--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Home</string>
-    <string name="gotonext">Go to next</string>
+    <string name="app_name">SecondActivity</string>
+    <string name="welcometosecond">Welcome to Second Activity</string>
+    <string name="gotohome">Go To Home</string>
 </resources>
